--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     padding: 50px;
     background-color: #f5f5f5;
+    
 }
 
 input, button {
@@ -11,4 +12,12 @@ input, button {
     margin: 10px;
     font-size: 16px;
     color: rgb(17, 97, 97);
+}
+.container {
+max-width: 400px;
+margin: 50px auto;
+padding: 30px;
+background-color: white;
+border-radius: 10px;
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
